First version of example 03 and README. Initial scaffolding of example 04